tests/test_proof/good/structs.catala_en
## Test

```catala
declaration structure T:
   data c content boolean
   data d content integer

declaration structure S:
    data a content integer
    data b content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals S { -- a : 0 -- b : T { -- c : false -- d: 0}}
  definition x under condition (y.a = 0) and y.b.c consequence equals 0
  definition x under condition not (y.a = 0) or not y.b.c consequence equals 1
```
```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/good/structs.catala_en:13.10-11:
└──┐
13 │   context x content integer
   │           ‾
   └─ Test
[RESULT] No errors found during the proof mode run.
```
